Scrollbar fixes

--- a/styles/base.less
+++ b/styles/base.less
@@ -20,3 +20,28 @@ atom-pane {
     border-right: none;
   }
 }
+
+.scrollbars-visible-always {
+  /deep/::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    background: @base-background-color;
+  }
+
+  /deep/::-webkit-scrollbar-track,
+  /deep/::-webkit-scrollbar-corner {
+    background: @base-background-color;
+  }
+
+  /deep/::-webkit-scrollbar-thumb {
+    background: @text-color;
+    border: 3px solid @base-background-color;
+    border-radius: 4px;
+    box-shadow: none !important;
+
+    &:hover,
+    &:active {
+      background: @text-color-highlight;
+    }
+  }
+}
